# clebrain

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.txt
Config/bciCompetitionIV/: DataList.txt
Include/clebrain/bciCompetitionIV/: Table.hh  TableReader.hh
Source/bciCompetitionIV/: Table.cc  TableReader.cc
Test/: Test.cc
Test/bciCompetitionIV/: Table.cc
